[package]
name = "snog"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
vello = { git = "https://github.com/linebender/vello", version = "0.0.1", rev = "ec8867a" }
wgpu = "0.17.0"
winit = "0.28.2"

[dev-dependencies]
rand = "0.8.5"
